# dbx_training

./: .gitignore  INIT.md  README.md  databricks.yml  pyproject.toml
resources/: sample_job.yml
src/ingest/: daily_ingest.py  history_ingestion.ipynb  history_ingestion.py
src/training_objets_trouves/: main.py
src/training_objets_trouves/ingest/: history_ingestion.ipynb
src/training_objets_trouves/transform/: gold_table.ipynb  silver_table.ipynb
src/training_objets_trouves/utils/: emails.py
src/transform/: gold_table.ipynb  history_transformation.ipynb  silver_table.ipynb
src/utils/: emails.py
test/utils/: test_emails.py
