[tool.poetry]
name = "training-objets-trouves"
version = "1.0.0"
description = ""
authors = ["Safae OUMAMI"]
readme = "README.md"

[tool.poetry.scripts]
task_main = "training_objets_trouves.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
target-version = "py310"
 
[tool.ruff.lint]
# Never enforce `E501` (line length violations).
# ignore = ["C901", "E501", "E741", "F402", "F823" ]
# per-file-ignores."__init__.py" = ["E402", "F401", "F403", "F811"]
select = ["C", "E", "F", "I", "W"]
isort.lines-after-imports = 2
 
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
 
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
 
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
 
# Like Black, automaticallsy detect the appropriate line ending.
line-ending = "auto"











